fix: datatime,null,alias

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -7,8 +7,8 @@ quarkus.log.console.color=false
 quarkus.log.category."org.grphqlcrud".level=DEBUG
 
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=user
-quarkus.datasource.password=password
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.url=jdbc:postgresql://127.0.0.1:5432/sampledb
 
 quarkus.flyway.migrate-at-start=true
