--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <failsafe-plugin.version>3.0.0-M3</failsafe-plugin.version>
     <version.com.graphql-java>15.0</version.com.graphql-java>
     <version.org.jooq>3.14.0</version.org.jooq>
+    <version.antlr>4.7.2</version.antlr>
   </properties>
   
   <dependencyManagement>
@@ -58,6 +59,11 @@
         <version>${version.com.graphql-java}</version>
       </dependency>
       <dependency>
+        <groupId>org.antlr</groupId>
+        <artifactId>antlr4-runtime</artifactId>
+        <version>${version.antlr}</version>
+      </dependency>
+      <dependency>
         <groupId>org.graphqlcrudjava</groupId>
         <artifactId>engine</artifactId>
         <version>${project.version}</version>
@@ -65,7 +71,7 @@
       <dependency>
         <groupId>com.graphql-java</groupId>
         <artifactId>graphql-java-extended-scalars</artifactId>
-        <version>1.0</version>
+        <version>16.0.0.1</version>
       </dependency>
       <dependency>
         <groupId>org.jooq</groupId>
